Updated swagger spec and paths for api
